# ePathshala-Backend

./: .gitignore  README.md
a_bank/: CMakeLists.txt
a_bank/database/: a_bank.sql
a_bank/sql/functions/: add-credit.sql  subtract.sql
a_bank/src/: Add.cpp  Add.h  HandleRequests.h  Subtract.cpp  Subtract.h  main.cpp
ePathshala/: CMakeLists.txt  main.cpp
ePathshala/data/: initData.json
ePathshala/database/: epathshala.sql
ePathshala/sample/data/: config.json
ePathshala/sql/: get-all-courses.sql  get-comments.sql  get-content-details.sql  get-contents.sql  get-course-details.sql  get-course-remain-content-count.sql  get-courses-popular.sql  get-courses-student.sql  get-courses.sql  get-student-all-courses.sql  get-student-courses.sql  get-student-details-home.sql  get-student-details.sql  get-teacher-courses.sql  get-teacher-details-home.sql  get-user-details.sql  get-user-id.sql
ePathshala/sql/create-new-account/: check-email-in-users.sql  create-new-account.sql  create-new-student-account.sql  create-new-teacher-account.sql  get-max-user-id.sql
ePathshala/sql/functions/: check-student-enrolled.sql  get-answers-by-time-desc.sql  get-comments-by-rate-asc.sql  get-comments-by-rate-desc.sql  get-comments-by-time-asc.sql  get-comments-by-time-desc.sql  get-content-details.sql  get-course-contents-by-rate-asc.sql  get-course-contents-by-rate-desc.sql  get-course-contents-by-title-asc.sql  get-course-contents-by-title-desc.sql  get-course-details.sql  get-course-remain-count.sql  get-courses-by-enroll-count-asc.sql  get-courses-by-enroll-count-desc.sql  get-courses-by-price-asc.sql  get-courses-by-price-desc.sql  get-courses-by-rate-asc.sql  get-courses-by-rate-desc.sql  get-courses-teacher-by-date-asc.sql  get-courses-teacher-by-date-desc.sql  get-courses-teacher-by-title-asc.sql  get-courses-teacher-by-title-desc.sql  get-courses-teacher.sql  get-courses.sql  get-individaul-answer-rate.sql  get-individaul-comment-rate.sql  get-individual-question-rate.sql  get-inidividual-content-rate.sql  get-interests.sql  get-new-answer-id.sql  get-new-comment-id.sql  get-new-content-id.sql  get-new-course-id.sql  get-new-question-id.sql  get-new-user-id.sql  get-question-details.sql  get-questions.sql  get-specialities.sql  get-student-courses-by-rate-asc.sql  (+24 more)
ePathshala/sql/init-not-logged-in/: top-courses.sql  top-videos.sql
ePathshala/sql/login/student/: check-email.sql  email-found.sql
ePathshala/sql/login/teacher/: check-email.sql  email-found.sql
ePathshala/sql/procedures/: collect-teacher-credit.sql  complete-view.sql  delete-answer.sql  delete-comment.sql  delete-content.sql  delete-course.sql  delete-interest.sql  delete-question.sql  delete-speciality.sql  enroll-student.sql  insert-interest.sql  insert-speciality.sql  insert-student.sql  insert-teacher.sql  post-answer.sql  post-comment.sql  print.sql  update-answer-rate.sql  update-answer.sql  update-comment-rate.sql  update-comment.sql  update-course.sql  update-question-rate.sql  update-question.sql
ePathshala/sql/search/courses/: search-result.sql
ePathshala/sql/search/pages/: search-result.sql
ePathshala/sql/search/quizes/: search-result.sql
ePathshala/sql/search/students/: search-result.sql
ePathshala/sql/search/teachers/: search-result.sql
ePathshala/sql/search/videos/: search-result.sql
ePathshala/sql/triggers/: answer-rate-trigger.sql  comment-rate-trigger.sql  content-view-complete-trigger.sql  content-view-count-trigger.sql  contents-rate-trigger.sql  course-enroll-count-trigger.sql  courses-rate-trigger.sql  enrolled-courses-insert-trigger.sql  insert-user-trigger.sql  question-rate-trigger.sql  teachers-rate-trigger.sql
ePathshala/src/: SetupDbClientPtr.cpp  SetupDbClientPtr.h  SetupInitData.cpp  SetupInitData.h  main.cpp
ePathshala/src/HandleDownload/: ContinueDownload.cpp  ContinueDownload.h  EndDownload.cpp  EndDownload.h  HandleDownload.h  StartDownload.cpp  StartDownload.h
ePathshala/src/HandleRequests/: HandleRequests.h
ePathshala/src/HandleRequests/root/: BuyCourse.cpp  BuyCourse.h  CheckStudentEnrolled.cpp  CheckStudentEnrolled.h  CollectCredit.cpp  CollectCredit.h  CreateNewAccount.cpp  CreateNewAccount.h  GetAllCourses.cpp  GetAllCourses.h  GetAnswers.cpp  GetAnswers.h  GetComments.cpp  GetComments.h  GetContentCourseId.cpp  GetContentCourseId.h  GetContentDetails.cpp  GetContentDetails.h  GetContents.cpp  GetContents.h  GetCourseContents.cpp  GetCourseContents.h  GetCourseDetails.cpp  GetCourseDetails.h  GetCourseRemainContentCount.cpp  GetCourseRemainContentCount.h  GetCourses.cpp  GetCourses.h  GetCoursesPopular.cpp  GetCoursesPopular.h  GetCoursesStudent.cpp  GetCoursesStudent.h  GetCoursesTeacher.cpp  GetCoursesTeacher.h  GetIndividualAnswerRate.cpp  GetIndividualAnswerRate.h  GetIndividualCommentRate.cpp  GetIndividualCommentRate.h  GetIndividualContentRate.cpp  GetIndividualContentRate.h  (+46 more)
ePathshala/src/HandleRequests/root/Delete/: Answer.cpp  Answer.h  Comment.cpp  Comment.h  Content.cpp  Content.h  Course.cpp  Course.h  Interest.cpp  Interest.h  Question.cpp  Question.h  Speciality.cpp  Speciality.h
ePathshala/src/HandleRequests/root/Insert/: Answer.cpp  Answer.h  Comment.cpp  Comment.h  Course.cpp  Course.h  Interest.cpp  Interest.h  Page.cpp  Page.h  Question.cpp  Question.h  Speciality.cpp  Speciality.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  User.cpp  User.h  View.cpp  View.h
ePathshala/src/HandleRequests/root/Update/: Answer.cpp  Answer.h  AnswerRate.cpp  AnswerRate.h  Comment.cpp  Comment.h  CommentRate.cpp  CommentRate.h  ContentRate.cpp  ContentRate.h  Course.cpp  Course.h  Page.cpp  Page.h  Question.cpp  Question.h  QuestionRate.cpp  QuestionRate.h  Video.cpp  Video.h  View.cpp  View.h
ePathshala/src/HandleRequests/root/Upload/: Video.cpp  Video.h
